Bug 1719272: Annotate failing browser/ tests to potentially enable https-first mode in Nightly r=webcompat-reviewers,denschub,webdriver-reviewers,preferences-reviewers,Gijs,whimboo
Differential Revision: https://phabricator.services.mozilla.com/D119177

UltraBlame original commit: 7eb8945dd8e326100faed48fc5b2217daf271e57

--- a/accessible/tests/browser/states/browser.ini
+++ b/accessible/tests/browser/states/browser.ini
@@ -48,6 +48,9 @@ browser_test_link
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -58,6 +61,9 @@ browser_test_visibility
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
