--- a/browser/base/content/test/about/browser.ini
+++ b/browser/base/content/test/about/browser.ini
@@ -173,6 +173,9 @@ browser_aboutNetError_csp_iframe
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -188,6 +191,9 @@ browser_aboutNetError_xfo_iframe
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
