--- a/browser/base/content/test/alerts/browser.ini
+++ b/browser/base/content/test/alerts/browser.ini
@@ -16,6 +16,9 @@ browser_notification_close
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -34,11 +37,17 @@ browser_notification_do_not_disturb
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_notification_open_settings
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -57,6 +66,9 @@ browser_notification_remove_permission
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -75,6 +87,9 @@ browser_notification_replace
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -93,6 +108,9 @@ browser_notification_tab_switching
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
