--- a/browser/base/content/test/contextMenu/browser.ini
+++ b/browser/base/content/test/contextMenu/browser.ini
@@ -93,6 +93,9 @@ browser_contextmenu_badiframe
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_contextmenu_inspect
 .
@@ -187,6 +190,9 @@ browser_contextmenu_share_win
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -209,6 +215,9 @@ browser_contextmenu_spellcheck
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -308,11 +317,17 @@ browser_utilityOverlay
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_utilityOverlayPrincipal
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_contextmenu_childprocess
 .
