--- a/browser/base/content/test/favicons/browser.ini
+++ b/browser/base/content/test/favicons/browser.ini
@@ -114,6 +114,9 @@ browser_invalid_href_fallback
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -138,6 +141,9 @@ browser_favicon_load
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -213,6 +219,9 @@ browser_rooticon
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -240,6 +249,9 @@ browser_title_flicker
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -324,6 +336,9 @@ browser_favicon_nostore
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -351,6 +366,9 @@ browser_favicon_crossorigin
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -372,6 +390,9 @@ browser_favicon_credentials
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
