--- a/browser/base/content/test/general/browser.ini
+++ b/browser/base/content/test/general/browser.ini
@@ -418,6 +418,9 @@ browser_backButtonFitts
 .
 js
 ]
+https_first_disabled
+=
+true
 #
 DO
 NOT
@@ -437,6 +440,9 @@ browser_beforeunload_duplicate_dialogs
 .
 js
 ]
+https_first_disabled
+=
+true
 #
 DO
 NOT
@@ -1184,6 +1190,9 @@ browser_bug575561
 .
 js
 ]
+https_first_disabled
+=
+true
 #
 DO
 NOT
@@ -1222,6 +1231,9 @@ browser_bug578534
 .
 js
 ]
+https_first_disabled
+=
+true
 #
 DO
 NOT
@@ -1460,6 +1472,9 @@ browser_bug623893
 .
 js
 ]
+https_first_disabled
+=
+true
 #
 DO
 NOT
@@ -1785,6 +1800,9 @@ browser_clipboard
 .
 js
 ]
+https_first_disabled
+=
+true
 #
 DO
 NOT
@@ -2317,6 +2335,9 @@ browser_middleMouse_noJSPaste
 .
 js
 ]
+https_first_disabled
+=
+true
 #
 DO
 NOT
@@ -2380,6 +2401,9 @@ browser_modifiedclick_inherit_principal
 .
 js
 ]
+https_first_disabled
+=
+true
 #
 DO
 NOT
@@ -2399,6 +2423,9 @@ browser_new_http_window_opened_from_file_tab
 .
 js
 ]
+https_first_disabled
+=
+true
 #
 DO
 NOT
@@ -2542,6 +2569,9 @@ browser_private_browsing_window
 .
 js
 ]
+https_first_disabled
+=
+true
 #
 DO
 NOT
@@ -2674,6 +2704,9 @@ browser_remoteTroubleshoot
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -3040,6 +3073,9 @@ browser_tabDrop
 .
 js
 ]
+https_first_disabled
+=
+true
 #
 DO
 NOT
@@ -3059,6 +3095,9 @@ browser_tab_detach_restore
 .
 js
 ]
+https_first_disabled
+=
+true
 #
 DO
 NOT
@@ -3665,6 +3704,9 @@ browser_newTabDrop
 .
 js
 ]
+https_first_disabled
+=
+true
 #
 DO
 NOT
@@ -3684,6 +3726,9 @@ browser_newWindowDrop
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -3729,6 +3774,9 @@ browser_newwindow_focus
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -3776,6 +3824,9 @@ browser_bug1299667
 .
 js
 ]
+https_first_disabled
+=
+true
 #
 DO
 NOT
