--- a/browser/base/content/test/popups/browser.ini
+++ b/browser/base/content/test/popups/browser.ini
@@ -67,6 +67,9 @@ browser_popup_frames
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -85,6 +88,9 @@ browser_popup_blocker_identity_block
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -105,6 +111,9 @@ browser_popup_blocker_frames
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -123,6 +132,9 @@ browser_popup_blocker_iframes
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
