--- a/browser/base/content/test/siteIdentity/browser.ini
+++ b/browser/base/content/test/siteIdentity/browser.ini
@@ -27,6 +27,9 @@ browser_about_blank_same_document_tabswitch
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -184,6 +187,9 @@ browser_getSecurityInfo
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -196,6 +202,9 @@ browser_identity_UI
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_identityBlock_flicker
 .
@@ -223,6 +232,9 @@ browser_identityIcon_img_url
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -269,6 +281,9 @@ browser_identityPopup_custom_roots
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_identityPopup_focus
 .
@@ -284,6 +299,9 @@ browser_mcb_redirect
 .
 js
 ]
+https_first_disabled
+=
+true
 tags
 =
 mcb
@@ -369,6 +387,9 @@ browser_mixedContentFramesOnHttp
 .
 js
 ]
+https_first_disabled
+=
+true
 tags
 =
 mcb
@@ -387,6 +408,9 @@ browser_mixedContentFromOnunload
 .
 js
 ]
+https_first_disabled
+=
+true
 tags
 =
 mcb
@@ -476,6 +500,9 @@ browser_check_identity_state
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -488,6 +515,9 @@ browser_iframe_navigation
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -505,6 +535,9 @@ browser_secure_transport_insecure_scheme
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ignore_same_page_navigation
 .
