--- a/browser/base/content/test/tabcrashed/browser.ini
+++ b/browser/base/content/test/tabcrashed/browser.ini
@@ -80,6 +80,9 @@ browser_multipleCrashedTabs
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -106,6 +109,9 @@ browser_printpreview_crash
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_showForm
 .
