--- a/browser/base/content/test/tabs/browser.ini
+++ b/browser/base/content/test/tabs/browser.ini
@@ -112,6 +112,9 @@ browser_close_during_beforeunload
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_close_tab_by_dblclick
 .
@@ -122,6 +125,9 @@ browser_contextmenu_openlink_after_tabnavigated
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -169,6 +175,9 @@ browser_e10s_about_page_triggeringprincipal
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -311,6 +320,9 @@ browser_multiselect_tabs_move_to_new_window_contextmenu
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_multiselect_tabs_move
 .
@@ -406,11 +418,17 @@ browser_navigatePinnedTab
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_new_file_whitelisted_http_tab
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -429,6 +447,9 @@ browser_new_tab_insert_position
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -471,6 +492,9 @@ browser_new_tab_in_privilegedabout_process_pref
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -508,6 +532,9 @@ browser_privilegedmozilla_process_pref
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -538,6 +565,9 @@ browser_opened_file_tab_navigated_to_web
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_overflowScroll
 .
@@ -610,6 +640,9 @@ browser_progress_keyword_search_handling
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_reload_deleted_file
 .
