--- a/browser/base/content/test/zoom/browser.ini
+++ b/browser/base/content/test/zoom/browser.ini
@@ -24,11 +24,17 @@ browser_background_link_zoom_reset
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_background_zoom
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_default_zoom
 .
@@ -39,6 +45,9 @@ browser_default_zoom_multitab
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_default_zoom_fission
 .
@@ -54,6 +63,9 @@ browser_image_zoom_tabswitch
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -74,11 +86,17 @@ browser_mousewheel_zoom
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_sitespecific_background_pref
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_sitespecific_image_zoom
 .
@@ -89,6 +107,9 @@ browser_sitespecific_video_zoom
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -145,6 +166,9 @@ browser_tabswitch_zoom_flicker
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
