--- a/browser/components/contextualidentity/test/browser/browser.ini
+++ b/browser/components/contextualidentity/test/browser/browser.ini
@@ -125,6 +125,9 @@ browser_forgetAPI_quota_clearStoragesForPrincipal
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -140,6 +143,9 @@ browser_reopenIn
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_tab_color_update
 .
@@ -160,6 +166,9 @@ browser_usercontextid_tabdrop
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -328,3 +337,6 @@ browser_originattrs_reopenin
 .
 js
 ]
+https_first_disabled
+=
+true
