--- a/browser/components/enterprisepolicies/tests/browser/browser.ini
+++ b/browser/components/enterprisepolicies/tests/browser/browser.ini
@@ -150,6 +150,9 @@ browser_policy_cookie_settings
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_policy_disable_feedback_commands
 .
@@ -255,6 +258,9 @@ browser_policy_extensionsettings
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_policy_extensionsettings2
 .
