--- a/browser/components/extensions/test/browser/browser.ini
+++ b/browser/components/extensions/test/browser/browser.ini
@@ -383,6 +383,9 @@ browser_ext_browserAction_context
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -723,6 +726,9 @@ browser_ext_contextMenus_onclick
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_contextMenus_radioGroups
 .
@@ -778,11 +784,17 @@ browser_ext_devtools_network
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_devtools_network_targetSwitch
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_devtools_optional
 .
@@ -850,6 +862,9 @@ browser_ext_find
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -915,6 +930,9 @@ browser_ext_menus
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_menus_accesskey
 .
@@ -970,6 +988,9 @@ browser_ext_menus_replace_menu_context
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_menus_replace_menu_permissions
 .
@@ -1010,6 +1031,9 @@ browser_ext_nontab_process_switch
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_omnibox
 .
@@ -1069,6 +1093,9 @@ browser_ext_optionsPage_privileges
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_pageAction_click_types
 .
@@ -1079,6 +1106,9 @@ browser_ext_pageAction_context
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -1140,6 +1170,9 @@ browser_ext_pageAction_show_matches
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_pageAction_simple
 .
@@ -1249,6 +1282,9 @@ browser_ext_port_disconnect_on_crash
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -1326,6 +1362,9 @@ browser_ext_sessions_getRecentlyClosed
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_sessions_getRecentlyClosed_private
 .
@@ -1346,11 +1385,17 @@ browser_ext_sessions_restoreTab
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_sessions_window_tab_value
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -1445,6 +1490,9 @@ browser_ext_slow_script
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -1492,6 +1540,9 @@ browser_ext_tabs_attention
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_tabs_audio
 .
@@ -1502,6 +1553,9 @@ browser_ext_tabs_containerIsolation
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_tabs_create
 .
@@ -1544,6 +1598,9 @@ browser_ext_tabs_detectLanguage
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_tabs_discard
 .
@@ -1560,16 +1617,25 @@ browser_ext_tabs_discard_reversed
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_tabs_discarded
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_tabs_duplicate
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_tabs_events
 .
@@ -1580,11 +1646,17 @@ browser_ext_tabs_events_order
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_tabs_executeScript
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_tabs_executeScript_about_blank
 .
@@ -1635,11 +1707,17 @@ browser_ext_tabs_hide
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_tabs_hide_update
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_tabs_highlight
 .
@@ -1655,6 +1733,9 @@ browser_ext_tabs_insertCSS
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_tabs_lastAccessed
 .
@@ -1675,6 +1756,9 @@ browser_ext_tabs_move_array
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_tabs_move_discarded
 .
@@ -1725,16 +1809,25 @@ browser_ext_tabs_printPreview
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_tabs_query
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_tabs_readerMode
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_tabs_reload
 .
@@ -1755,16 +1848,25 @@ browser_ext_tabs_saveAsPDF
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_tabs_sendMessage
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_tabs_sharingState
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_tabs_successors
 .
@@ -1795,6 +1897,9 @@ browser_ext_tabs_warmup
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_tabs_zoom
 .
@@ -1849,6 +1954,9 @@ browser_ext_urlbar
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_user_events
 .
@@ -1882,6 +1990,9 @@ browser_ext_webNavigation_containerIsolation
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_webNavigation_frameId0
 .
@@ -1922,16 +2033,25 @@ browser_ext_webNavigation_urlbar_transitions
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_windows
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_windows_allowScriptsToClose
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_windows_create
 .
@@ -1972,6 +2092,9 @@ browser_ext_windows_create_tabId
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_windows_create_url
 .
@@ -2108,11 +2231,17 @@ browser_ext_contentscript_cross_docGroup_adoption
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ext_contentscript_cross_docGroup_adoption_xhr
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_toolbar_prefers_color_scheme
 .
