--- a/browser/components/originattributes/test/browser/browser.ini
+++ b/browser/components/originattributes/test/browser/browser.ini
@@ -303,11 +303,17 @@ browser_broadcastChannel
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_cache
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -318,21 +324,33 @@ browser_cookieIsolation
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_favicon_firstParty
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_favicon_userContextId
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_firstPartyIsolation
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -366,16 +384,25 @@ browser_firstPartyIsolation_saveAs
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_localStorageIsolation
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_blobURLIsolation
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
