--- a/browser/components/places/tests/browser/browser.ini
+++ b/browser/components/places/tests/browser/browser.ini
@@ -103,6 +103,9 @@ browser_bookmark_add_tags
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -261,6 +264,9 @@ browser_bookmark_titles
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -486,6 +492,9 @@ browser_click_bookmarks_on_toolbar
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_controller_onDrop_query
 .
@@ -1003,6 +1012,9 @@ browser_toolbar_library_open_recent
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_toolbar_other_bookmarks
 .
@@ -1125,6 +1137,9 @@ browser_bookmark_all_tabs
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -1160,3 +1175,6 @@ browser_drag_folder_on_newTab
 .
 js
 ]
+https_first_disabled
+=
+true
