--- a/browser/components/resistfingerprinting/test/browser/browser.ini
+++ b/browser/components/resistfingerprinting/test/browser/browser.ini
@@ -60,6 +60,9 @@ browser_dynamical_window_rounding
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -80,6 +83,9 @@ browser_navigator
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -112,6 +118,9 @@ browser_netInfo
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_performanceAPI
 .
@@ -245,3 +254,6 @@ browser_bug1369357_site_specific_zoom_level
 .
 js
 ]
+https_first_disabled
+=
+true
