--- a/browser/components/sessionstore/test/browser.ini
+++ b/browser/components/sessionstore/test/browser.ini
@@ -476,6 +476,9 @@ browser_backup_recovery
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -501,6 +504,9 @@ browser_broadcast
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_capabilities
 .
@@ -516,6 +522,9 @@ browser_crashedTabs
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -584,6 +593,9 @@ browser_revive_crashed_bg_tabs
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -686,6 +698,9 @@ browser_frametree
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_frame_history
 .
@@ -706,6 +721,9 @@ browser_label_and_icon
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -733,6 +751,9 @@ browser_old_favicon
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_page_title
 .
@@ -779,6 +800,9 @@ browser_restore_redirect
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_restoreTabContainer
 .
@@ -794,6 +818,9 @@ browser_scrollPositions
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -810,6 +837,9 @@ browser_sessionHistory
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -837,6 +867,9 @@ browser_tab_label_during_restore
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_swapDocShells
 .
@@ -989,6 +1022,9 @@ browser_394759_behavior
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_394759_perwindowpb
 .
@@ -1343,6 +1379,9 @@ reload
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_586068
 -
@@ -1465,6 +1504,9 @@ SSWindowState_events_setWindowState
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_615394
 -
@@ -1587,6 +1629,9 @@ browser_687710_2
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_694378
 .
@@ -1787,6 +1832,9 @@ browser_906076_lazy_tabs
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -1837,6 +1885,9 @@ browser_async_window_flushing
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_focus_after_restore
 .
@@ -1847,11 +1898,17 @@ browser_forget_async_closings
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_movePendingTabToNewWindow
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_multiple_navigateAndRestore
 .
@@ -1902,6 +1959,9 @@ browser_parentProcessRestoreHash
 .
 js
 ]
+https_first_disabled
+=
+true
 run
 -
 if
@@ -1963,6 +2023,9 @@ browser_background_tab_crash
 .
 js
 ]
+https_first_disabled
+=
+true
 run
 -
 if
@@ -2048,6 +2111,9 @@ browser_tabs_in_urlbar
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_cookies
 .
@@ -2126,11 +2192,17 @@ browser_reopen_all_windows
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_ignore_updates_crashed_tabs
 .
 js
 ]
+https_first_disabled
+=
+true
 run
 -
 if
