--- a/browser/components/urlbar/tests/browser-tips/browser.ini
+++ b/browser/components/urlbar/tests/browser-tips/browser.ini
@@ -78,11 +78,17 @@ browser_searchTips_interaction
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_searchTips
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_selection
 .
