--- a/browser/components/urlbar/tests/browser/browser.ini
+++ b/browser/components/urlbar/tests/browser/browser.ini
@@ -200,6 +200,9 @@ browser_autocomplete_enter_race
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_autocomplete_no_title
 .
@@ -239,6 +242,9 @@ browser_autoFill_canonize
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_autoFill_caretNotAtEnd
 .
@@ -301,6 +307,9 @@ browser_canonizeURL
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -350,6 +359,9 @@ browser_copying
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -413,6 +425,9 @@ browser_downArrowKeySearch
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_dragdropURL
 .
@@ -423,6 +438,9 @@ browser_dynamicResults
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -511,6 +529,9 @@ browser_inputHistory
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -531,6 +552,9 @@ browser_keepStateAcrossTabSwitches
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_keywordBookmarklets
 .
@@ -604,6 +628,9 @@ browser_locationBarCommand
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -734,6 +761,9 @@ browser_pasteAndGo
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_paste_multi_lines
 .
@@ -862,6 +892,9 @@ browser_remoteness_switch
 .
 js
 ]
+https_first_disabled
+=
+true
 run
 -
 if
@@ -942,6 +975,9 @@ browser_searchMode_clickLink
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -964,11 +1000,17 @@ browser_searchMode_heuristic
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_searchMode_indicator
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -1009,6 +1051,9 @@ browser_searchMode_pickResult
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_searchMode_preview
 .
@@ -1019,6 +1064,9 @@ browser_searchMode_sessionStore
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -1043,6 +1091,9 @@ browser_searchMode_setURI
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_searchMode_suggestions
 .
@@ -1076,6 +1127,9 @@ browser_searchSingleWordNotification
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_searchSuggestions
 .
@@ -1220,6 +1274,9 @@ browser_stop_pending
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -1331,11 +1388,17 @@ browser_top_sites
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_top_sites_private
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_typed_value
 .
@@ -1351,6 +1414,9 @@ browser_updateForDomainCompletion
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_urlbar_event_telemetry_abandonment
 .
@@ -1371,6 +1437,9 @@ browser_urlbar_event_telemetry_engagement
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -1441,6 +1510,9 @@ browser_urlbar_telemetry_places
 .
 js
 ]
+https_first_disabled
+=
+true
 tags
 =
 search
@@ -1491,6 +1563,9 @@ browser_urlbar_telemetry_sponsored_topsites
 .
 js
 ]
+https_first_disabled
+=
+true
 tags
 =
 search
@@ -1571,6 +1646,9 @@ browser_UrlbarInput_setURI
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_UrlbarInput_tooltip
 .
@@ -1581,6 +1659,9 @@ browser_UrlbarInput_trimURLs
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_userTypedValue
 .
@@ -1631,6 +1712,9 @@ browser_waitForLoadOrTimeout
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
