--- a/devtools/client/aboutdebugging/test/browser/browser.ini
+++ b/devtools/client/aboutdebugging/test/browser/browser.ini
@@ -850,6 +850,9 @@ browser_aboutdebugging_serviceworker_fetch_flag
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -904,11 +907,17 @@ browser_aboutdebugging_serviceworker_push
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_aboutdebugging_serviceworker_pushservice_url
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_aboutdebugging_serviceworker_runtime
 -
@@ -916,21 +925,33 @@ page
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_aboutdebugging_serviceworker_start
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_aboutdebugging_serviceworker_status
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_aboutdebugging_serviceworker_timeout
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -950,6 +971,9 @@ browser_aboutdebugging_serviceworker_unregister
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_aboutdebugging_sidebar_connection_state
 .
