--- a/devtools/client/application/test/browser/browser.ini
+++ b/devtools/client/application/test/browser/browser.ini
@@ -315,6 +315,9 @@ workers
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -336,6 +339,9 @@ registration
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -353,6 +359,9 @@ workers
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -370,6 +379,9 @@ worker
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -452,6 +464,9 @@ worker
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -521,6 +536,9 @@ json
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_application_panel_manifest
 -
@@ -528,6 +546,9 @@ reload
 .
 js
 ]
+https_first_disabled
+=
+true
 #
 Telemetry
 tests
@@ -540,6 +561,9 @@ worker
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -672,6 +696,9 @@ switching
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
