--- a/devtools/client/performance-new/test/browser/browser.ini
+++ b/devtools/client/performance-new/test/browser/browser.ini
@@ -203,6 +203,9 @@ capture
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_devtools
 -
@@ -223,6 +226,9 @@ button
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_popup
 -
@@ -232,6 +238,9 @@ states
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_popup
 -
@@ -241,6 +250,9 @@ capture
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_popup
 -
@@ -252,6 +264,9 @@ view
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_popup
 -
@@ -360,3 +375,6 @@ button
 .
 js
 ]
+https_first_disabled
+=
+true
