--- a/devtools/client/responsive/test/browser/browser.ini
+++ b/devtools/client/responsive/test/browser/browser.ini
@@ -180,6 +180,9 @@ browser_cmd_click
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_container_tab
 .
@@ -275,6 +278,9 @@ browser_ext_messaging
 .
 js
 ]
+https_first_disabled
+=
+true
 tags
 =
 devtools
@@ -309,6 +315,9 @@ browser_navigation
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_network_throttling
 .
@@ -329,6 +338,9 @@ browser_page_state
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_page_style
 .
@@ -358,6 +370,9 @@ browser_screenshot_button_warning
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_screenshot_button
 .
@@ -398,6 +413,9 @@ browser_target_blank
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_telemetry_activate_rdm
 .
@@ -463,6 +481,9 @@ browser_touch_simulation
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -494,6 +515,9 @@ browser_viewport_basics
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_viewport_changed_meta
 .
