--- a/devtools/client/webconsole/test/browser/_webconsole.ini
+++ b/devtools/client/webconsole/test/browser/_webconsole.ini
@@ -1726,6 +1726,9 @@ browser_webconsole_cached_messages_duplicate_after_target_switching
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_webconsole_cached_messages_no_duplicate
 .
@@ -1756,21 +1759,33 @@ browser_webconsole_click_function_to_source
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_webconsole_click_function_to_mapped_source
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_webconsole_click_function_to_prettyprinted_source
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_webconsole_clickable_urls
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_webconsole_close_unfocused_window
 .
@@ -1844,6 +1859,9 @@ browser_webconsole_console_table
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_webconsole_console_timeStamp
 .
@@ -1859,6 +1877,9 @@ browser_webconsole_console_trace_duplicates
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_webconsole_context_menu_export_console_output
 .
@@ -1904,6 +1925,9 @@ browser_webconsole_context_menu_copy_link_location
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -1979,6 +2003,9 @@ browser_webconsole_context_menu_open_url
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_webconsole_context_menu_store_as_global
 .
@@ -2002,11 +2029,17 @@ browser_webconsole_cors_errors
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_webconsole_csp_ignore_reflected_xss_message
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_webconsole_csp_violation
 .
@@ -2017,6 +2050,9 @@ browser_webconsole_cspro
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_webconsole_css_error_impacted_elements
 .
@@ -2155,6 +2191,9 @@ browser_webconsole_execution_scope
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_webconsole_external_script_errors
 .
@@ -2198,6 +2237,9 @@ browser_webconsole_filter_navigation_marker
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_webconsole_filter_scroll
 .
