--- a/docshell/test/browser/browser.ini
+++ b/docshell/test/browser/browser.ini
@@ -334,6 +334,9 @@ browser_alternate_fixup_middle_click_link
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_backforward_userinteraction
 .
@@ -391,16 +394,25 @@ browser_bug1206879
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_bug1309900_crossProcessHistoryNavigation
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_bug1328501
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_bug1347823
 .
@@ -416,6 +428,9 @@ browser_bug1415918_beforeunload_options
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_bug1622420
 .
@@ -436,6 +451,9 @@ browser_bug1673702
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -495,6 +513,9 @@ browser_bug1674464
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -622,6 +643,9 @@ browser_bug422543
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_bug441169
 .
@@ -721,6 +745,9 @@ browser_fission_maxOrigins
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_frameloader_swap_with_bfcache
 .
@@ -731,6 +758,9 @@ browser_backforward_restore_scroll
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -765,6 +795,9 @@ browser_uriFixupAlternateRedirects
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -782,6 +815,9 @@ browser_multiple_pushState
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_onbeforeunload
 .
@@ -824,6 +860,9 @@ browser_onunload_stop
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_overlink
 .
@@ -904,6 +943,9 @@ browser_history_triggeringprincipal_viewsource
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_click_link_within_view_source
 .
@@ -916,6 +958,9 @@ browser_browsingContext
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_browsingContext
 -
@@ -923,6 +968,9 @@ browser_browsingContext
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_browsingContext
 -
@@ -951,6 +999,9 @@ webProgress
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_csp_uir
 .
@@ -971,6 +1022,9 @@ browser_cross_process_csp_inheritance
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -1035,16 +1089,25 @@ browser_browsing_context_attached
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_browsing_context_discarded
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_fall_back_to_https
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -1098,6 +1161,9 @@ browser_bug1691153
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_bug1705872
 .
@@ -1108,3 +1174,6 @@ browser_isInitialDocument
 .
 js
 ]
+https_first_disabled
+=
+true
