--- a/dom/tests/browser/browser.ini
+++ b/dom/tests/browser/browser.ini
@@ -138,6 +138,9 @@ browser_beforeunload_between_chrome_content
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -279,6 +282,9 @@ browser_hasbeforeunload
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -296,6 +302,9 @@ browser_largeAllocation_win32
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -329,6 +338,9 @@ browser_largeAllocation_non_win32
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -366,6 +378,9 @@ browser_localStorage_e10s
 .
 js
 ]
+https_first_disabled
+=
+true
 fail
 -
 if
@@ -587,6 +602,9 @@ browser_test_toolbars_visibility
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
