--- a/remote/cdp/test/browser/input/browser.ini
+++ b/remote/cdp/test/browser/input/browser.ini
@@ -60,11 +60,17 @@ browser_dispatchKeyEvent_events
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_dispatchKeyEvent_race
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
