--- a/remote/cdp/test/browser/network/browser.ini
+++ b/remote/cdp/test/browser/network/browser.ini
@@ -69,6 +69,9 @@ browser_deleteCookies
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_emulateNetworkConditions
 .
@@ -79,11 +82,17 @@ browser_getAllCookies
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_getCookies
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -117,16 +126,25 @@ browser_navigationEvents
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_responseReceived
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_requestWillBeSent
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_setCookie
 .
