--- a/remote/cdp/test/browser/page/browser.ini
+++ b/remote/cdp/test/browser/page/browser.ini
@@ -140,6 +140,9 @@ browser_lifecycleEvent
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_loadEventFired
 .
@@ -150,6 +153,9 @@ browser_navigate
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_navigateToHistoryEntry
 .
