--- a/remote/cdp/test/browser/runtime/browser.ini
+++ b/remote/cdp/test/browser/runtime/browser.ini
@@ -62,6 +62,9 @@ browser_consoleAPICalled
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_evaluate
 .
@@ -72,6 +75,9 @@ browser_exceptionThrown
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_executionContextEvents
 .
