--- a/toolkit/components/aboutprocesses/tests/browser/browser.ini
+++ b/toolkit/components/aboutprocesses/tests/browser/browser.ini
@@ -28,6 +28,9 @@ browser_aboutprocesses_default_options
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -41,6 +44,9 @@ browser_aboutprocesses_show_all_frames
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -54,6 +60,9 @@ browser_aboutprocesses_show_threads
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -67,6 +76,9 @@ browser_aboutprocesses_show_frames_without_threads
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
