--- a/toolkit/components/antitracking/test/browser/browser.ini
+++ b/toolkit/components/antitracking/test/browser/browser.ini
@@ -686,6 +686,9 @@ browser_PBMCookieBehavior
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_socialtracking
 .
@@ -1229,3 +1232,6 @@ browser_AntiTrackingETPHeuristic
 .
 js
 ]
+https_first_disabled
+=
+true
