--- a/toolkit/components/cleardata/tests/browser/browser.ini
+++ b/toolkit/components/cleardata/tests/browser/browser.ini
@@ -3,6 +3,9 @@ browser_css_cache
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -18,6 +21,9 @@ browser_image_cache
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -33,6 +39,9 @@ browser_preflight_cache
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -50,6 +59,9 @@ browser_sessionStorage
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_quota
 .
