--- a/toolkit/mozapps/extensions/test/browser/browser.ini
+++ b/toolkit/mozapps/extensions/test/browser/browser.ini
@@ -341,6 +341,9 @@ browser_history_navigation
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_html_abuse_report
 .
@@ -380,6 +383,9 @@ browser_html_discover_view
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -437,6 +443,9 @@ browser_html_recommendations
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_html_scroll_restoration
 .
@@ -447,6 +456,9 @@ browser_html_updates
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_html_warning_messages
 .
@@ -579,6 +591,9 @@ browser_webapi_access
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_webapi_addon_listener
 .
