--- a/tools/profiler/tests/browser/browser.ini
+++ b/tools/profiler/tests/browser/browser.ini
@@ -90,6 +90,9 @@ browser_test_profile_single_frame_page_info
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -102,6 +105,9 @@ browser_test_profile_multi_frame_page_info
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -117,6 +123,9 @@ browser_test_marker_network_simple
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -141,6 +150,9 @@ browser_test_marker_network_redirect
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
