--- a/browser/base/content/test/keyboard/browser.ini
+++ b/browser/base/content/test/keyboard/browser.ini
@@ -13,6 +13,9 @@ browser_bookmarks_shortcut
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_cancel_caret_browsing_in_content
 .
@@ -30,6 +33,9 @@ browser_popup_keyNav
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
