--- a/browser/base/content/test/popupNotifications/browser.ini
+++ b/browser/base/content/test/popupNotifications/browser.ini
@@ -63,6 +63,9 @@ browser_popupNotification_2
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -117,6 +120,9 @@ browser_popupNotification_3
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -366,6 +372,9 @@ browser_popupNotification_no_anchors
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
