--- a/browser/base/content/test/protectionsUI/browser.ini
+++ b/browser/base/content/test/protectionsUI/browser.ini
@@ -40,6 +40,9 @@ browser_protectionsUI
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -70,26 +73,41 @@ browser_protectionsUI_background_tabs
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_protectionsUI_categories
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_protectionsUI_cookies_subview
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_protectionsUI_cryptominers
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_protectionsUI_fetch
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -111,11 +129,17 @@ browser_protectionsUI_fingerprinters
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_protectionsUI_icon_state
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_protectionsUI_milestones
 .
@@ -126,16 +150,25 @@ browser_protectionsUI_open_preferences
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_protectionsUI_pbmode_exceptions
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_protectionsUI_report_breakage
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -152,6 +185,9 @@ browser_protectionsUI_socialtracking
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_protectionsUI_shield_visibility
 .
@@ -175,23 +211,38 @@ browser_protectionsUI_state
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_protectionsUI_state_reset
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_protectionsUI_telemetry
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_protectionsUI_trackers_subview
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_protectionsUI_subview_shim
 .
 js
 ]
+https_first_disabled
+=
+true
