--- a/browser/base/content/test/referrer/browser.ini
+++ b/browser/base/content/test/referrer/browser.ini
@@ -22,11 +22,17 @@ browser_referrer_middle_click
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_referrer_middle_click_in_container
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_referrer_open_link_in_private
 .
@@ -50,6 +56,9 @@ browser_referrer_open_link_in_tab
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -68,6 +77,9 @@ browser_referrer_open_link_in_window
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -86,6 +98,9 @@ browser_referrer_open_link_in_window_in_container
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -104,11 +119,17 @@ browser_referrer_simple_click
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_referrer_click_pinned_tab
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_referrer_open_link_in_container_tab
 .
@@ -132,6 +153,9 @@ browser_referrer_open_link_in_container_tab2
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
