--- a/browser/base/content/test/tabdialogs/browser.ini
+++ b/browser/base/content/test/tabdialogs/browser.ini
@@ -25,11 +25,17 @@ browser_tabdialogbox_navigation
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_tabdialogbox_focus
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_subdialog_esc
 .
