--- a/browser/base/content/test/webrtc/browser.ini
+++ b/browser/base/content/test/webrtc/browser.ini
@@ -82,6 +82,9 @@ browser_devices_get_user_media
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -107,21 +110,33 @@ browser_devices_get_user_media_anim
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_devices_get_user_media_by_device_id
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_devices_get_user_media_default_permissions
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_devices_get_user_media_in_frame
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -135,6 +150,9 @@ browser_devices_get_user_media_in_xorigin_frame
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -156,11 +174,17 @@ browser_devices_get_user_media_in_xorigin_frame_chain
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_devices_get_user_media_multi_process
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -192,6 +216,9 @@ browser_devices_get_user_media_paused
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -245,6 +272,9 @@ browser_devices_get_user_media_screen
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -286,6 +316,9 @@ browser_devices_get_user_media_tear_off_tab
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -299,16 +332,25 @@ browser_devices_get_user_media_unprompted_access
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_devices_get_user_media_unprompted_access_in_frame
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_devices_get_user_media_unprompted_access_tear_off_tab
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -337,6 +379,9 @@ browser_devices_get_user_media_unprompted_access_queue_request
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_devices_select_audio_output
 .
@@ -438,6 +483,9 @@ browser_devices_get_user_media_queue_request
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_WebrtcGlobalInformation
 .
