--- a/browser/components/customizableui/test/browser.ini
+++ b/browser/components/customizableui/test/browser.ini
@@ -373,6 +373,9 @@ browser_947914_button_history
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -908,6 +911,9 @@ browser_exit_background_customize_mode
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_flexible_space_area
 .
@@ -933,6 +939,9 @@ browser_history_recently_closed_middleclick
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_history_restore_session
 .
