--- a/browser/components/newtab/test/browser/browser.ini
+++ b/browser/components/newtab/test/browser/browser.ini
@@ -202,6 +202,9 @@ browser_aboutwelcome_observer
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_as_load_location
 .
@@ -217,6 +220,9 @@ browser_asrouter_snippets
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_asrouter_snippets_dismiss
 .
@@ -328,6 +334,9 @@ browser_asrouter_cfr
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_asrouter_infobar
 .
@@ -368,6 +377,9 @@ browser_asrouter_group_frequency
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_asrouter_group_userprefs
 .
@@ -378,6 +390,9 @@ browser_trigger_listeners
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_customize_menu_render
 .
@@ -388,3 +403,6 @@ browser_customize_menu_content
 .
 js
 ]
+https_first_disabled
+=
+true
