--- a/browser/modules/test/browser/browser.ini
+++ b/browser/modules/test/browser/browser.ini
@@ -268,6 +268,9 @@ browser_SitePermissions_tab_urls
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_TabUnloader
 .
@@ -467,21 +470,33 @@ browser_UsageTelemetry
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_UsageTelemetry_domains
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_UsageTelemetry_interaction
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_UsageTelemetry_private_and_restore
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -500,6 +515,9 @@ browser_UsageTelemetry_uniqueOriginsVisitedInPast24Hours
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_UsageTelemetry_content_aboutRestartRequired
 .
