--- a/devtools/server/tests/browser/browser.ini
+++ b/devtools/server/tests/browser/browser.ini
@@ -1074,6 +1074,9 @@ browser_navigateEvents
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_perf
 -
@@ -1287,11 +1290,17 @@ names
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_storage_dynamic_windows
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -1314,11 +1323,17 @@ browser_storage_listings
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_storage_updates
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_storage_webext_storage_local
 .
