--- a/toolkit/components/passwordmgr/test/browser/browser.ini
+++ b/toolkit/components/passwordmgr/test/browser/browser.ini
@@ -144,6 +144,9 @@ browser_autocomplete_import
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_autocomplete_insecure_warning
 .
@@ -159,6 +162,9 @@ browser_autofill_hidden_document
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -192,6 +198,9 @@ browser_autofill_http
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -224,6 +233,14 @@ browser_basicAuth_switchTab
 .
 js
 ]
+[
+browser_autofill_http
+.
+js
+]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -384,6 +401,9 @@ browser_doorhanger_httpsUpgrade
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -414,6 +434,9 @@ browser_doorhanger_remembering
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -608,6 +631,9 @@ browser_insecurePasswordConsoleWarning
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -618,6 +644,9 @@ browser_localip_frame
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -694,6 +723,9 @@ browser_username_select_dialog
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
