--- a/toolkit/components/places/tests/browser/browser.ini
+++ b/toolkit/components/places/tests/browser/browser.ini
@@ -13,6 +13,9 @@ browser_bug399606
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -66,6 +69,9 @@ browser_bug461710
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -91,11 +97,17 @@ browser_bug646422
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_bug680727
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -106,6 +118,9 @@ browser_bug1601563
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -125,6 +140,9 @@ browser_double_redirect
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -151,6 +169,9 @@ browser_history_post
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -171,6 +192,9 @@ browser_onvisit_title_null_for_navigation
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -217,6 +241,9 @@ browser_multi_redirect_frecency
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -241,6 +268,9 @@ browser_settitle
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -261,6 +291,9 @@ browser_visituri
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
