Bug 1713726 - Add a SmartBlock shim for Ads By Google; r=denschub,webcompat-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D121098

UltraBlame original commit: 84c5e73c357d1c56489b90ede7d116e0ab812451

--- a/browser/extensions/webcompat/manifest.json
+++ b/browser/extensions/webcompat/manifest.json
@@ -35,7 +35,7 @@ version
 "
 24
 .
-12
+13
 .
 0
 "
@@ -680,6 +680,15 @@ shims
 facebook
 .
 svg
+"
+"
+shims
+/
+google
+-
+ads
+.
+js
 "
 "
 shims
