--- a/browser/components/places/tests/unit/interactions/xpcshell.ini
+++ b/browser/components/places/tests/unit/interactions/xpcshell.ini
@@ -1,6 +1,33 @@
 [
 DEFAULT
 ]
+prefs
+=
+browser
+.
+places
+.
+interactions
+.
+enabled
+=
+true
+browser
+.
+places
+.
+interactions
+.
+log
+=
+true
+browser
+.
+pagedata
+.
+log
+=
+true
 head
 =
 head_interactions
@@ -28,6 +55,11 @@ js
 ]
 [
 test_snapshots_create_criteria
+.
+js
+]
+[
+test_snapshots_pagedata
 .
 js
 ]
