--- a/testing/web-platform/meta/sanitizer-api/sanitizer-sanitizeFor.https.tentative.html.ini
+++ b/testing/web-platform/meta/sanitizer-api/sanitizer-sanitizeFor.https.tentative.html.ini
@@ -1404,3 +1404,19 @@ allowComments
 expected
 :
 FAIL
+[
+Sanitizer
+.
+sanitizeFor
+function
+shouldn
+'
+t
+load
+the
+image
+.
+]
+expected
+:
+FAIL
