Bug 1720673 [wpt PR 29674] - Update wpt metadata, a=testonly
wpt-pr: 29674
wpt-type: metadata

UltraBlame original commit: 5d9dd25092bb7d21a2c671690d8eec921762bd4e

--- a/testing/web-platform/meta/mediacapture-insertable-streams/MediaStreamTrackGenerator-video.https.html.ini
+++ b/testing/web-platform/meta/mediacapture-insertable-streams/MediaStreamTrackGenerator-video.https.html.ini
@@ -99,3 +99,24 @@ write
 expected
 :
 FAIL
+[
+Tests
+that
+frames
+are
+actually
+rendered
+correctly
+in
+a
+stream
+sent
+over
+a
+peer
+connection
+.
+]
+expected
+:
+FAIL
