Bug 1719272: Annotate failing browser/ tests to potentially enable https-first mode in Nightly r=webcompat-reviewers,denschub,webdriver-reviewers,preferences-reviewers,Gijs,whimboo
Differential Revision: https://phabricator.services.mozilla.com/D119177

UltraBlame original commit: 6cf55eca13aeb952c06a8b6a1161418d39dc1ddf

--- a/toolkit/components/passwordmgr/test/browser/browser.ini
+++ b/toolkit/components/passwordmgr/test/browser/browser.ini
@@ -144,6 +144,9 @@ browser_autocomplete_import
 .
 js
 ]
+https_first_disabled
+=
+true
 [
 browser_autocomplete_insecure_warning
 .
@@ -159,6 +162,9 @@ browser_autofill_hidden_document
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -192,6 +198,9 @@ browser_autofill_http
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -224,6 +233,9 @@ browser_basicAuth_switchTab
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -384,6 +396,9 @@ browser_doorhanger_httpsUpgrade
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
@@ -414,6 +429,9 @@ browser_doorhanger_remembering
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -608,6 +626,9 @@ browser_insecurePasswordConsoleWarning
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -618,6 +639,9 @@ browser_localip_frame
 .
 js
 ]
+https_first_disabled
+=
+true
 skip
 -
 if
@@ -694,6 +718,9 @@ browser_username_select_dialog
 .
 js
 ]
+https_first_disabled
+=
+true
 support
 -
 files
