--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -29548,6 +29548,23 @@ true
 mirror
 :
 always
+-
+name
+:
+gfx
+.
+basic_layer_manager
+.
+force_enabled
+type
+:
+RelaxedAtomicBool
+value
+:
+false
+mirror
+:
+always
 #
 Whether
 to
