--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -7565,6 +7565,58 @@ false
 mirror
 :
 always
+#
+Testing
+-
+only
+pref
+which
+makes
+data
+:
+URIs
+be
+loaded
+in
+a
+"
+web
+"
+content
+process
+#
+instead
+of
+within
+a
+process
+based
+on
+the
+URI
+'
+s
+loader
+.
+-
+name
+:
+browser
+.
+tabs
+.
+remote
+.
+dataUriInDefaultWebProcess
+type
+:
+bool
+value
+:
+false
+mirror
+:
+always
 -
 name
 :
@@ -7779,6 +7831,59 @@ value
 false
 #
 endif
+mirror
+:
+always
+#
+Pref
+to
+control
+whether
+we
+use
+a
+separate
+privileged
+content
+process
+#
+for
+certain
+mozilla
+webpages
+(
+which
+are
+listed
+in
+the
+pref
+#
+browser
+.
+tabs
+.
+remote
+.
+separatedMozillaDomains
+)
+.
+-
+name
+:
+browser
+.
+tabs
+.
+remote
+.
+separatePrivilegedMozillaWebContentProcess
+type
+:
+bool
+value
+:
+false
 mirror
 :
 always
