--- a/testing/web-platform/meta/intersection-observer/cross-origin-iframe.sub.html.ini
+++ b/testing/web-platform/meta/intersection-observer/cross-origin-iframe.sub.html.ini
@@ -16,6 +16,10 @@ rAF
 expected
 :
 if
+fission
+:
+FAIL
+if
 debug
 :
 PASS
@@ -23,3 +27,19 @@ PASS
 PASS
 FAIL
 ]
+[
+topDocument
+.
+scrollingElement
+.
+scrollTop
+=
+100
+]
+expected
+:
+if
+fission
+:
+FAIL
+PASS
